--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ pandas>=2.0
 matplotlib>=3.7
 wordcloud>=1.9
 # Optional for spaCy nouns cloud:
-# spacy>=3.7
-# de-core-news-sm
+spacy>=3.7
+de-core-news-sm>=3.7
